--- a/app/assets/stylesheets/logo.css
+++ b/app/assets/stylesheets/logo.css
@@ -93,3 +93,54 @@
   border-bottom: 15px solid transparent;
 }
 
+@media (max-width: 577px){
+  .balloon3-left {
+    position: relative;
+    display: inline-block;
+    margin: 1.5em 0 1.5em 15px;
+    padding: 0 5px;
+    width: 100px;
+    height: 90px;
+    line-height: 90px;
+    text-align: center;
+    color: #FFF;
+    font-size: 15px;
+    font-weight: bold;
+    background: #ffcc75;
+    border-radius: 50%;
+    box-sizing: border-box;
+    margin-right: 30px;
+  }
+  
+  .balloon3-left:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: -25px;
+    margin-top: -15px;
+    border: 15px solid transparent;
+    border-right: 15px solid #ffcc75;
+    z-index: 0;
+  }
+  
+  .btn_design {
+    font-size: 10px;
+   width: 150px;
+   margin-left: auto;
+   margin-right: auto;
+   margin-top: 40px;
+   
+   text-align: center;
+   font-weight: bold;
+   padding: 20px 15px;
+   background-color: #ffffff;
+   color: #000000;
+   border: #000000 solid 2px;
+   border-bottom: 8px solid #000000;
+   border-radius: 5px;
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   box-sizing: border-box;
+   transition: 0.2s;
+  }
+}
