--- a/app/assets/stylesheets/logo.css
+++ b/app/assets/stylesheets/logo.css
@@ -99,7 +99,7 @@
     display: inline-block;
     margin: 1.5em 0 1.5em 15px;
     padding: 0 5px;
-    width: 100px;
+    width: 110px;
     height: 90px;
     line-height: 90px;
     text-align: center;
@@ -142,5 +142,39 @@
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    transition: 0.2s;
+  }
+
+  .balloons {
+    margin-top: 50px;
+  }
+
+  .balloon1{
+    position: relative;
+    padding: 20px;
+    border-radius: 10px;
+    color: #ffffff;
+    background-color:  #ffcc75;
+    margin-left: 110px;          /* 左に余白を設ける */
+    margin-bottom: 20px;
+    width: 250px;
+  }
+  /* 画像 - 絶対配置で左上に配置 */
+  .balloon1 .icon{
+    position: absolute;
+    left: -110px;
+    top: 0;
+  }
+  /* 三角アイコン */
+  .balloon1::before{
+    content: '';
+    position: absolute;
+    display: block;
+    width: 0;
+    height: 0;
+    left: -15px;
+    top: 20px;
+    border-right: 15px solid #ffcc75;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
   }
 }
