--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -8,6 +8,12 @@
   <%= render 'shared/error_messages', model: f.object %>
       <form>
         <div class="form-group">
+          <%= f.label :"画像" %><br />
+          <%= f.file_field :image %>
+        </div>
+        <div id="image-list"></div>
+
+        <div class="form-group">
           <%= f.label :info, "Info" %>
           <%= f.text_field :info, class:"form-control", placeholder: "Enter Info"%>
           <small id="emailHelp" class="form-text text-muted">You share information.</small>
